--- a/systemd-services/log-pH.service
+++ b/systemd-services/log-pH.service
@@ -6,7 +6,7 @@ After=multi-user.target
 Type=idle
 Restart=always
 RestartSec=3
-ExecStart="/usr/bin/python /home/pi/swmeas/rpi_scripts/log_pH.py"
+ExecStart=/usr/bin/python /home/pi/swmeas/rpi_scripts/log_pH.py
 
 [Install]
 WantedBy=multi-user.target
