--- a/systemd-services/logger.service
+++ b/systemd-services/logger.service
@@ -6,7 +6,7 @@ After=multi-user.target
 Type=idle
 Restart=always
 RestartSec=3
-ExecStart="/path/to/python path/to/script"
+ExecStart=/usr/bin/python /home/pi/test_script.py
 
 [Install]
 WantedBy=multi-user.target
